@@ -764,6 +764,7 @@ struct pkt {
 #define LOOP_HUFFPUFF		9	/* set huff-n'-puff filter length */
 #define LOOP_FREQ		10	/* set initial frequency */
 #define LOOP_KERN_CLEAR		11	/* reset kernel pll parameters */
+#define LOOP_CODEC		12	/* set audio codec frequency */
 
 /*
  * Configuration items for the stats printer
