@@ -1,3 +1,5 @@
+* codec (audio) and ICOM changes from Dave Mills.
+
 (4.2.4) Released by Harlan Stenn <stenn@ntp.org>
 * monopt.html fixes from Dave Mills.
 * [Bug 452] Do not report kernel PLL/FLL flips.
